[package]
name = "luadec"
version = "0.2.0"
edition = "2021"
authors = ["ItsLucas <itslucas@itslucas.me>", "Dwayne Slater <ds84182@gmail.com>"]
description = "A Lua 5.1 bytecode decompiler library, originated from lbcdec"
license = "GPL-3.0"
repository = "https://github.com/ItsLucas/luadec"
documentation = "https://docs.rs/luadec"
readme = "README.md"
keywords = ["lua", "decompiler", "bytecode", "reverse-engineering"]
categories = ["parsing", "development-tools"]

[lib]
name = "luadec"
path = "src/lib.rs"

[dependencies]
nom = "7.1"
tempfile = "3.0"
enum_primitive = "0.1"
log = "0.4"
env_logger = { version = "0.10", optional = true }
obstack = "0.1"
glob = "0.3"
rayon = "1.7"
either = "1.8"
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]